--- a/styles/main.css
+++ b/styles/main.css
@@ -3082,7 +3082,11 @@ a.tag:hover {
     font-weight: 400;
     line-height: 1.25;
 }
-
+@media screen and (max-width: 769px) {
+    .subtitle, .button.is-medium {
+        font-size: 1rem;
+    }
+}
 .subtitle strong {
     color: #363636;
     font-weight: 600;
@@ -7184,7 +7188,7 @@ a.panel-block:hover, label.panel-block:hover {
 
     .column.is-three-fifths, .column.is-three-fifths-tablet {
         flex: none;
-        width: 74.5%;
+        width: 82%;
     }
 
     .column.is-four-fifths, .column.is-four-fifths-tablet {
@@ -13023,7 +13027,7 @@ input[name="carousel"] {
 /*# sourceMappingURL=main.css.map */
 
 .my_logo{
-    width:200px;
+    width:115px;
     height:50px;
     border-width:0;
     background-image:url(../img/divya-logo.svg);
@@ -13131,11 +13135,10 @@ svg:not(:host).svg-inline--fa, svg:not(:root).svg-inline--fa {overflow: visible;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    width: 1120px;
 }
 @media only screen and (max-width:1130px) {
     .container {
-        width: 960px;
+        max-width: 960px;
     }
 }
 .about-container {
